# macmahon

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-and-deploy.yaml
calculator/: Cargo.toml
calculator/src/: lib.rs
macmahon/: Cargo.toml
macmahon-common/: Cargo.toml
macmahon-common/src/: lib.rs
macmahon-web/: Cargo.toml  index.html
macmahon-web/src/: main.rs
macmahon/src/: main.rs
nix-utils/: flake.nix
src/: lib.rs  main.rs
